@@ -1,3 +1,8 @@
+2011-11-01  Bastian Maerkisch  <bmaerkisch@web.de>
+
+	* src/win/wmenu.c src/win/wtext.c: Use proper dropdown menu for 
+	Options toolbar item.
+
 2011-10-30  Bastian Maerkisch  <bmaerkisch@web.de>
 
 	* INSTALL: Update Windows section.
